// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Flex Column Direction 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="sc-gKclnd exdBHI sc-iCfMLu jciJBO sc-hGPBjI kBwkZQ"
    >
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu clEFVC"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu jmzPPr"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu fKFKMy"
        style="height: 200px; width: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Flex Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="sc-gKclnd exdBHI sc-iCfMLu jciJBO sc-hGPBjI dljPk"
    >
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu clEFVC"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu jmzPPr"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu fKFKMy"
        style="height: 200px; width: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Flex Flex On Children 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="sc-gKclnd exdBHI sc-iCfMLu jciJBO sc-hGPBjI hCkpHX"
    >
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu clEFVC"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu clEFVC"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKclnd iQIogj sc-iCfMLu clEFVC"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu jmzPPr"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu fKFKMy"
        style="height: 200px; width: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Flex Justified 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="sc-gKclnd exdBHI sc-iCfMLu jciJBO sc-hGPBjI kZhRrI"
    >
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu clEFVC"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu jmzPPr"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu fKFKMy"
        style="height: 200px; width: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Flex Wrap 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="sc-gKclnd exdBHI sc-iCfMLu jciJBO sc-hGPBjI hCkpHX"
    >
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu clEFVC"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu clEFVC"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu jmzPPr"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu fKFKMy"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu clEFVC"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu jmzPPr"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu fKFKMy"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu clEFVC"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu jmzPPr"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKclnd exdBHI sc-iCfMLu fKFKMy"
        style="height: 200px; width: 200px;"
      />
    </div>
  </div>
</div>
`;
